--- a/app/templates/components/gameboard.hbs
+++ b/app/templates/components/gameboard.hbs
@@ -1,91 +1,118 @@
 <div class="table">
     <div class="board">
         <div class="center">
-            <div class="community-chest-deck">
+
+            <CenterDeck @name="communityChest" />
+            {{!-- <div class="community-chest-deck">
                 <h2 class="label">Community Chest</h2>
                 <div class="deck"></div>
-            </div>
+            </div> --}}
+            
             <h1 class="title">MONOPOLY</h1>
-            <div class="chance-deck">
+
+            <CenterDeck @name="chance" />
+            {{!-- <div class="chance-deck">
                 <h2 class="label">Chance</h2>
                 <div class="deck"></div>
-            </div>
+            </div> --}}
         </div>
 
-        <div class="space corner go">
+        <Go />
+        {{!-- <div class="space corner go">
             <div class="container">
                 <div class="instructions">Collect $200.00 salary as you pass</div>
                 <div class="go-word">go</div>
             </div>
             <div class="arrow fa fa-long-arrow-left"></div>
-        </div>
+        </div> --}}
 
         <div class="row horizontal-row bottom-row">
-            <div class="space property">
+            <Property @name="property5" />
+            {{!-- <div class="space property">
                 <div class="container">
                     <div class="color-bar light-blue"></div>
                     <div class="name">Connecticut Avenue</div>
                     <div class="price">PRICE $120</div>
                 </div>
-            </div>
-            <div class="space property">
+            </div> --}}
+
+            <Property @name="property4" />
+            {{!-- <div class="space property">
                 <div class="container">
                     <div class="color-bar light-blue"></div>
                     <div class="name">Vermont Avenue</div>
                     <div class="price">Price $100</div>
                 </div>
-            </div>
-            <div class="space chance">
+            </div> --}}
+
+            <DeckSpace @name="chance" />
+            {{!-- <div class="space chance">
                 <div class="container">
                     <div class="name">Chance</div>
                     <i class="drawing fa fa-question blue"></i>
                 </div>
-            </div>
-            <div class="space property">
+            </div> --}}
+
+            <Property @name="property3" />
+            {{!-- <div class="space property">
                 <div class="container">
                     <div class="color-bar light-blue"></div>
                     <div class="name">Oriental Avenue</div>
                     <div class="price">Price $100</div>
                 </div>
-            </div>
-            <div class="space railroad">
+            </div> --}}
+
+            <Railroad @name="railroad1"/>
+
+            {{!-- <div class="space railroad">
                 <div class="container">
                     <div class="name">Reading Railroad</div>
                     <i class="drawing fa fa-subway"></i>
                     <div class="price">Price $200</div>
                 </div>
-            </div>
-            <div class="space fee income-tax">
+            </div> --}}
+
+            <Tax @name="income" />
+
+            {{!-- <div class="space fee income-tax">
                 <div class="container">
                     <div class="name">Income Tax</div>
                     <div class="diamond"></div>
                     <div class="instructions">Pay 10%<br>or<br>$200</div>
                 </div>
-            </div>
-            <div class="space property">
+            </div> --}}
+
+            <Property @name="property2" />
+            {{!-- <div class="space property">
                 <div class="container">
                     <div class="color-bar dark-purple"></div>
                     <div class="name">Baltic Avenue</div>
                     <div class="price">Price $50</div>
                 </div>
-            </div>
-            <div class="space community-chest">
+            </div> --}}
+
+            <DeckSpace @name="communityChest" />
+
+            {{!-- <div class="space community-chest">
                 <div class="container">
                     <div class="name">Community Chest</div>
                     <i class="drawing fa fa-cube"></i>
                     <div class="instructions">Follow instructions on top card</div>
                 </div>
-            </div>
-            <div class="space property">
+            </div> --}}
+
+            <Property @name="property1" />
+            {{!-- <div class="space property">
                 <div class="container">
                     <div class="color-bar dark-purple"></div>
                     <div class="name three-line-name">Mediter-<br>ranean<br>Avenue</div>
                     <div class="price">Price $50</div>
                 </div>
-            </div>
+            </div> --}}
         </div>
 
-        <div class="space corner jail">
+        <Jail />
+        {{!-- <div class="space corner jail">
             <div class="just">Just</div>
             <div class="drawing">
                 <div class="container">
@@ -100,218 +127,278 @@
                 </div>
             </div>
             <div class="visiting">Visiting</div>
-        </div>
+        </div> --}}
 
         <div class="row vertical-row left-row">
-            <div class="space property">
+
+            <Property @name="property11" />
+            {{!-- <div class="space property">
                 <div class="container">
                     <div class="color-bar orange"></div>
                     <div class="name">New York Avenue</div>
                     <div class="price">Price $200</div>
                 </div>
-            </div>
-            <div class="space property">
+            </div> --}}
+
+            <Property @name="property10" />
+            {{!-- <div class="space property">
                 <div class="container">
                     <div class="color-bar orange"></div>
                     <div class="name">Tennessee Avenue</div>
                     <div class="price">Price $180</div>
                 </div>
-            </div>
-            <div class="space community-chest">
+            </div> --}}
+
+            <DeckSpace @name="communityChest" />
+            {{!-- <div class="space community-chest">
                 <div class="container">
                     <div class="name">Community Chest</div>
                     <i class="drawing fa fa-cube"></i>
                     <div class="instructions">Follow instructions on top card</div>
                 </div>
-            </div>
-            <div class="space property">
+            </div> --}}
+
+            <Property @name="property9" />
+            {{!-- <div class="space property">
                 <div class="container">
                     <div class="color-bar orange"></div>
                     <div class="name">St. James Avenue</div>
                     <div class="price">Price $180</div>
                 </div>
-            </div>
-            <div class="space railroad">
+            </div> --}}
+
+            <Railroad @name="railroad2"/>
+            {{!-- <div class="space railroad">
                 <div class="container">
                     <div class="name long-name">Pennsylvania Railroad</div>
                     <i class="drawing fa fa-subway"></i>
                     <div class="price">Price $200</div>
                 </div>
-            </div>
-            <div class="space property">
+            </div> --}}
+
+            <Property @name="property8" />
+            {{!-- <div class="space property">
                 <div class="container">
                     <div class="color-bar purple"></div>
                     <div class="name">Virginia Avenue</div>
                     <div class="price">Price $160</div>
                 </div>
-            </div>
-            <div class="space property">
+            </div> --}}
+
+            <Property @name="property7" />
+            {{!-- <div class="space property">
                 <div class="container">
                     <div class="color-bar purple"></div>
                     <div class="name">States Avenue</div>
                     <div class="price">Price $140</div>
                 </div>
-            </div>
-            <div class="space utility electric-company">
+            </div> --}}
+
+            <Utilities @name="electric"/>
+
+            {{!-- <div class="space utility electric-company">
                 <div class="container">
                     <div class="name">Electric Company</div>
                     <i class="drawing far fa-lightbulb"></i>
                     <div class="price">Price $150</div>
                 </div>
-            </div>
-            <div class="space property">
+            </div> --}}
+
+            <Property @name="property6" />
+            {{!-- <div class="space property">
                 <div class="container">
                     <div class="color-bar purple"></div>
                     <div class="name">St. Charles Place</div>
                     <div class="price">Price $140</div>
                 </div>
-            </div>
+            </div> --}}
         </div>
 
-        <div class="space corner free-parking">
+        <FreeParking />
+        {{!-- <div class="space corner free-parking">
             <div class="container">
                 <div class="name">Free</div>
                 <i class="drawing fa fa-car"></i>
                 <div class="name">Parking</div>
             </div>
-        </div>
+        </div> --}}
 
         <div class="row horizontal-row top-row">
-            <div class="space property">
+
+            <Property @name="property12" />
+            {{!-- <div class="space property">
                 <div class="container">
                     <div class="color-bar red"></div>
                     <div class="name">Kentucky Avenue</div>
                     <div class="price">Price $220</div>
                 </div>
-            </div>
-            <div class="space chance">
+            </div> --}}
+
+            <DeckSpace @name="chance" />
+
+            {{!-- <div class="space chance">
                 <div class="container">
                     <div class="name">Chance</div>
                     <i class="drawing fa fa-question blue"></i>
                 </div>
-            </div>
-            <div class="space property">
+            </div> --}}
+
+            <Property @name="property13" />
+            {{!-- <div class="space property">
                 <div class="container">
                     <div class="color-bar red"></div>
                     <div class="name">Indiana Avenue</div>
                     <div class="price">Price $220</div>
                 </div>
-            </div>
-            <div class="space property">
+            </div> --}}
+
+            <Property @name="property14" />
+            {{!-- <div class="space property">
                 <div class="container">
                     <div class="color-bar red"></div>
                     <div class="name">Illinois Avenue</div>
                     <div class="price">Price $200</div>
                 </div>
-            </div>
-            <div class="space railroad">
+            </div> --}}
+
+            <Railroad @name="railroad3"/>
+            {{!-- <div class="space railroad">
                 <div class="container">
                     <div class="name">B & O Railroad</div>
                     <i class="drawing fa fa-subway"></i>
                     <div class="price">Price $200</div>
                 </div>
-            </div>
-            <div class="space property">
+            </div> --}}
+
+            <Property @name="property15" />
+            {{!-- <div class="space property">
                 <div class="container">
                     <div class="color-bar yellow"></div>
                     <div class="name">Atlantic Avenue</div>
                     <div class="price">Price $260</div>
                 </div>
-            </div>
-            <div class="space property">
+            </div> --}}
+
+            <Property @name="property16" />
+            {{!-- <div class="space property">
                 <div class="container">
                     <div class="color-bar yellow"></div>
                     <div class="name">Ventnor Avenue</div>
                     <div class="price">Price $260</div>
                 </div>
-            </div>
-            <div class="space utility waterworks">
+            </div> --}}
+
+            <Utilities @name="waterworks"/>
+            {{!-- <div class="space utility waterworks">
                 <div class="container">
                     <div class="name">Waterworks</div>
                     <i class="drawing fa fa-tint"></i>
                     <div class="price">Price $120</div>
                 </div>
-            </div>
-            <div class="space property">
+            </div> --}}
+
+            <Property @name="property17" />
+            {{!-- <div class="space property">
                 <div class="container">
                     <div class="color-bar yellow"></div>
                     <div class="name">Marvin Gardens</div>
                     <div class="price">Price $280</div>
                 </div>
-            </div>
+            </div> --}}
         </div>
 
-        <div class="space corner go-to-jail">
+        <GoToJail />
+
+        {{!-- <div class="space corner go-to-jail">
             <div class="container">
                 <div class="name">Go To</div>
                 <i class="drawing fas fa-gavel"></i>
                 <div class="name">Jail</div>
             </div>
-        </div>
+        </div> --}}
 
         <div class="row vertical-row right-row">
-            <div class="space property">
+
+            <Property @name="property17" />
+            {{!-- <div class="space property">
                 <div class="container">
                     <div class="color-bar green"></div>
                     <div class="name">Pacific Avenue</div>
                     <div class="price">Price $300</div>
                 </div>
-            </div>
-            <div class="space property">
+            </div> --}}
+
+            <Property @name="property18" />
+            {{!-- <div class="space property">
                 <div class="container">
                     <div class="color-bar green"></div>
                     <div class="name">North C Avenue</div>
                     <div class="price">Price $300</div>
                 </div>
-            </div>
-            <div class="space community-chest">
+            </div> --}}
+
+            <DeckSpace @name="communityChest" />
+
+            {{!-- <div class="space community-chest">
                 <div class="container">
                     <div class="name">Community Chest</div>
                     <i class="drawing fa fa-cube"></i>
                     <div class="instructions">Follow instructions on top card</div>
                 </div>
-            </div>
-            <div class="space property">
+            </div> --}}
+
+            <Property @name="property19" />
+            {{!-- <div class="space property">
                 <div class="container">
                     <div class="color-bar green"></div>
                     <div class="name long-name">Pennsylvania Avenue</div>
                     <div class="price">Price $320</div>
                 </div>
-            </div>
-            <div class="space railroad">
+            </div> --}}
+
+            <Railroad @name="railroad4"/>
+            {{!-- <div class="space railroad">
                 <div class="container">
                     <div class="name">Short Line</div>
                     <i class="drawing fa fa-subway"></i>
                     <div class="price">Price $200</div>
                 </div>
-            </div>
-            <div class="space chance">
+            </div> --}}
+
+            <DeckSpace @name="chance" />
+            {{!-- <div class="space chance">
                 <div class="container">
                     <div class="name">Chance</div>
                     <i class="drawing fa fa-question blue"></i>
                 </div>
-            </div>
-            <div class="space property">
+            </div> --}}
+
+            <Property @name="property21" />
+            {{!-- <div class="space property">
                 <div class="container">
                     <div class="color-bar dark-blue"></div>
                     <div class="name">Park Place</div>
                     <div class="price">Price $350</div>
                 </div>
-            </div>
-            <div class="space fee luxury-tax">
+            </div> --}}
+
+            <Tax @name="luxury" />
+            {{!-- <div class="space fee luxury-tax">
                 <div class="container">
                     <div class="name">Luxury Tax</div>
                     <div class="drawing far fa-gem"></div>
                     <div class="instructions">Pay $75.00</div>
                 </div>
-            </div>
-            <div class="space property">
+            </div> --}}
+
+            <Property @name="property22" />
+            {{!-- <div class="space property">
                 <div class="container">
                     <div class="color-bar dark-blue"></div>
                     <div class="name">Boardwalk</div>
                     <div class="price">Price $400</div>
                 </div>
-            </div>
+            </div> --}}
         </div>
     </div>
 </div>
