--- a/app/templates/components/gameboard.hbs
+++ b/app/templates/components/gameboard.hbs
@@ -2,7 +2,10 @@
     <div class="board">
         <div class="center">
             <CenterDeck @name="communityChest" />
+
             <h1 class="title">MONOPOLY</h1>
+            <Dice />
+
             <CenterDeck @name="chance" />
         </div>
 
