Add ownership div to each tile

--- a/app/templates/components/deck-space.hbs
+++ b/app/templates/components/deck-space.hbs
@@ -4,6 +4,8 @@
     <div class="container">
         <div class="name">{{get-name @name}}</div> 
 
+        <div class="ownership">_</div>
+
         {{!-- Helper to determine icon --}}
         <i class="drawing fa {{if (eq @name "communityChest") "fa-cube" "fa-question blue"}}"></i>
         
