--- a/app/templates/components/property.hbs
+++ b/app/templates/components/property.hbs
@@ -2,6 +2,10 @@
     <div class="container">
         <div class="color-bar {{get-name @name 'color'}}"></div>
         <div class="name">{{get-name @name 'streetName'}}</div>
-        <div class="price">Price ${{get-name @name 'price'}}</div>
+
+        <div class="ownership">_</div>
+
+        <div class="price">
+            Price ${{get-name @name 'price'}}</div>
     </div>
 </div>
