--- a/app/templates/components/railroad.hbs
+++ b/app/templates/components/railroad.hbs
@@ -1,6 +1,8 @@
 <div class="space railroad">
     <div class="container">
         <div class="name">{{get-name @name}}</div>
+
+        <div class="ownership">_</div>
         <i class="drawing fa fa-subway"></i>
         <div class="price">Price $200</div>
     </div>
