--- a/app/templates/components/tax.hbs
+++ b/app/templates/components/tax.hbs
@@ -2,6 +2,9 @@
     {{if (eq @name "income") "income-tax" "luxury-tax"}}">
     <div class="container">
         <div class="name">{{get-name @name}}</div>
+        
+        <div class="ownership">_</div>
+
         <div class="{{if (eq @name "income") "diamond" "drawing far fa-gem"}}"></div>
         <div class="instructions">
             {{#if (eq @name "income")}}
