--- a/app/templates/components/go-to-jail.hbs
+++ b/app/templates/components/go-to-jail.hbs
@@ -1,6 +1,6 @@
 <div class="space corner go-to-jail">
     <div class="container">
-        <div class="name">Go To</div>
+        <div class="name">{{get-name @board-position 'name'}}</div>
         <i class="drawing fas fa-gavel"></i>
         <div class="name">Jail</div>
     </div>
