--- a/app/templates/components/jail.hbs
+++ b/app/templates/components/jail.hbs
@@ -9,7 +9,7 @@
                 <div class="bar"></div>
                 <i class="person far fa-frown"></i>
             </div>
-            <div class="name">Jail</div>
+            <div class="name">{{get-name @board-position 'name'}}</div>
         </div>
     </div>
     <div class="visiting">Visiting</div>
