--- a/app/templates/components/utilities.hbs
+++ b/app/templates/components/utilities.hbs
@@ -1,11 +1,14 @@
-<div class="space utility playerA-ownership 
-    {{if (eq @name "electric") "electric-company" "waterworks"}}">
+<div class="space utility
+    {{if (eq (get-name @board-position 'name') "Electric Company") "electric-company" "waterworks"}}">
+
     <div class="container">
-        <div class="name">{{get-name @name}}</div>
+        <div class="name">{{get-name @board-position 'name'}}</div>
 
         <div class="ownership">_</div>
         
-        <i class="drawing {{if (eq @name "electric") "far fa-lightbulb" "fas fa-tint"}}"></i>
-        <div class="price">Price {{if (eq @name "electric") "$150" "$120"}}</div>
+        <i class="drawing 
+        {{if (eq (get-name @board-position 'name') "Electric Company") "far fa-lightbulb" "fas fa-tint"}}"></i>
+
+        <div class="price">Price {{get-name @board-position 'price'}}</div>
     </div>
 </div>
