--- a/app/templates/components/gameboard.hbs
+++ b/app/templates/components/gameboard.hbs
@@ -3,7 +3,7 @@
 
         {{!-- Center of game board --}}
         <div class="center">
-            <CenterDeck @name="communityChest" />
+            <CenterDeck @deck-name="communityChest" />
 
             <h1 class="title">MONOPOLY</h1>
             <Dice />
