Update helper to get-value

--- a/app/templates/components/go.hbs
+++ b/app/templates/components/go.hbs
@@ -1,7 +1,7 @@
 <div class="space corner go">
     <div class="container">
         <div class="instructions">Collect $200.00 salary as you pass</div>
-        <div class="go-word">{{get-name @board-position 'name'}}</div>
+        <div class="go-word">{{get-value @board-position 'name'}}</div>
     </div>
     <div class="arrow fa fa-long-arrow-left"></div>
 </div>
