--- a/app/templates/components/railroad.hbs
+++ b/app/templates/components/railroad.hbs
@@ -1,9 +1,9 @@
 <div class="space railroad">
     <div class="container">
-        <div class="name">{{get-name @board-position 'name'}}</div>
+        <div class="name">{{get-value @board-position 'name'}}</div>
 
         <div class="ownership">_</div>
         <i class="drawing fa fa-subway"></i>
-        <div class="price">Price ${{get-name @board-position 'price'}}</div>
+        <div class="price">Price ${{get-value @board-position 'price'}}</div>
     </div>
 </div>
