--- a/app/templates/components/free-parking.hbs
+++ b/app/templates/components/free-parking.hbs
@@ -2,6 +2,6 @@
     <div class="container">
         <div class="name">Free</div>
         <i class="drawing fa fa-car"></i>
-        <div class="name">{{get-name @board-position 'name'}}</div>
+        <div class="name">{{get-value @board-position 'name'}}</div>
     </div>
 </div>
