--- a/app/templates/components/property.hbs
+++ b/app/templates/components/property.hbs
@@ -1,11 +1,11 @@
 <div class="space property">
     <div class="container">
-        <div class="color-bar {{get-name @board-position 'color'}}"></div>
-        <div class="name">{{get-name @board-position 'streetName'}}</div>
+        <div class="color-bar {{get-value @board-position 'color'}}"></div>
+        <div class="name">{{get-value @board-position 'streetName'}}</div>
 
         <div class="ownership">_</div>
 
         <div class="price">
-            Price ${{get-name @board-position 'price'}}</div>
+            Price ${{get-value @board-position 'price'}}</div>
     </div>
 </div>
