--- a/app/templates/components/gameboard.hbs
+++ b/app/templates/components/gameboard.hbs
@@ -8,12 +8,14 @@
         <div class="center">
             <CenterDeck @deck-name="communityChest" />
 
-            <h1 class="title">MONOPOLY | {{@game.currentPlayerId}} {{@game.currentPlayer.positionOnBoard}}</h1>
+            <h1 class="title">MONOPOLY | {{@game.currentPlayer.name}} {{@game.currentPlayer.positionOnBoard}}</h1>
+            
             <Dice
                 @currentDice={{@game.dice.current}}
                 @isDouble={{@game.dice.isDouble}}
                 @diceTotal={{@game.dice.total}}
                 @roll={{@game.rollForCurrentPlayer}}
+                @disabled={{@game.isDiceRollAllowed}}  {{!-- Determine if dice roll button can be clicked --}}
                 />
             
             <CenterDeck @name="chance" />
