Add CSS styles to buttons

--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -9,7 +9,7 @@
     /* background-position: center;
     background-repeat: repeat;
     background-size: 100px; */
-    background-color: #490063;
+    background-color: white; /*#490063*/
     font-family: "Oswald", sans-serif;
     font-weight: 400;
     font-size: 10px;
@@ -430,6 +430,27 @@
     grid-row: 6;
     font-size: 50px;
     color: rgb(97, 8, 240);
+  }
+
+  
+  .display-GOOJ {
+    grid-column: 1/9;
+    grid-row: 7;
+    padding-bottom: 55px;
+    color: blue;
+  }
+
+  .player-details {
+    grid-column: 1/9;
+    grid-row: 3;
+    font-size: 40px;
+    font-weight: 200;
+    color: red;
+  }
+
+  .display-end-turn {
+    grid-column: 2/9;
+    grid-row: 3;
   }
 
   .community-chest-deck-drawing {
