--- a/app/templates/components/get-out-of-jail.hbs
+++ b/app/templates/components/get-out-of-jail.hbs
@@ -1,11 +1,13 @@
-{{#if (gt @player.numGetOutOfJailCard 0)}}
-<button onClick={{action this.useGOOJcard}}>
-    Use GOOJ card
-</button>
-{{/if}}
+<div class="display-GOOJ">
+    {{#if (gt @player.numGetOutOfJailCard 0)}}
+    <button onClick={{action this.useGOOJcard}}>
+        Use GOOJ card
+    </button>
+    {{/if}}
 
-{{#if (gt @player.money 50)}}
-<button onClick={{action this.payFine}}>
-    Pay $50 fine
-</button>
-{{/if}}
+    {{#if (gt @player.money 50)}}
+    <button onClick={{action this.payFine}}>
+        Pay $50 fine
+    </button>
+    {{/if}}
+</div>
