Create player-token component, add to other templates

--- a/app/templates/components/free-parking.hbs
+++ b/app/templates/components/free-parking.hbs
@@ -3,5 +3,7 @@
         <div class="name">Free</div>
         <i class="drawing fa fa-car"></i>
         <div class="name">{{get-value @board-position 'name'}}</div>
+
+        <PlayerToken />
     </div>
 </div>
