--- a/app/templates/components/go-to-jail.hbs
+++ b/app/templates/components/go-to-jail.hbs
@@ -3,5 +3,7 @@
         <div class="name">{{get-value @board-position 'name'}}</div>
         <i class="drawing fas fa-gavel"></i>
         <div class="name">Jail</div>
+
+        <PlayerToken />
     </div>
-</div>a
+</div>
