--- a/app/templates/components/go.hbs
+++ b/app/templates/components/go.hbs
@@ -2,6 +2,8 @@
     <div class="container">
         <div class="instructions">Collect $200.00 salary as you pass</div>
         <div class="go-word">{{get-value @board-position 'name'}}</div>
+
+        <PlayerToken />
+        
     </div>
-    <div class="arrow fa fa-long-arrow-left"></div>
 </div>
