--- a/app/templates/components/tax.hbs
+++ b/app/templates/components/tax.hbs
@@ -14,5 +14,8 @@
             Pay ${{get-value @board-position 'price'}}
             {{/if}}
         </div>
+
+        <PlayerToken />
+        
     </div>
 </div>
