--- a/app/templates/components/utilities.hbs
+++ b/app/templates/components/utilities.hbs
@@ -9,6 +9,8 @@
         <i class="drawing 
         {{if-name-equals @board-position "Electric Company" "far fa-lightbulb" "fas fa-tint"}}"></i>
 
+        <PlayerToken />
+        
         <div class="price">Price {{get-value @board-position 'price'}}</div>
     </div>
 </div>
