--- a/app/templates/components/railroad.hbs
+++ b/app/templates/components/railroad.hbs
@@ -4,6 +4,9 @@
 
         <div class="ownership">_</div>
         <i class="drawing fa fa-subway"></i>
+        
+        <PlayerToken />
+        
         <div class="price">Price ${{get-value @board-position 'price'}}</div>
     </div>
 </div>
