--- a/app/templates/components/player-token.hbs
+++ b/app/templates/components/player-token.hbs
@@ -1,5 +1,10 @@
-<div class="player-tokens"><i class="fas fa-car"></i>
-    <i class="fas fa-dog"></i>
+<div class="player-tokens">
+    {{#each this.visibleTokens as |token|}}
+    
+    <i class="fas fa-{{token}}"></i>
+    {{/each}}
+    
+    {{!-- <i class="fas fa-dog"></i>
     <i class="fas fa-ship"></i>
-    <i class="fas fa-space-shuttle"></i>
+    <i class="fas fa-space-shuttle"></i> --}}
 </div>
