--- a/app/templates/components/free-parking.hbs
+++ b/app/templates/components/free-parking.hbs
@@ -4,6 +4,6 @@
         <i class="drawing fa fa-car"></i>
         <div class="name">{{get-value @board-position 'name'}}</div>
 
-        <PlayerToken />
+        <PlayerToken @position={{@board-position}}/>
     </div>
 </div>
