--- a/app/templates/components/go-to-jail.hbs
+++ b/app/templates/components/go-to-jail.hbs
@@ -4,6 +4,6 @@
         <i class="drawing fas fa-gavel"></i>
         <div class="name">Jail</div>
 
-        <PlayerToken />
+        <PlayerToken @position={{@board-position}}/>
     </div>
 </div>
