--- a/app/templates/components/go.hbs
+++ b/app/templates/components/go.hbs
@@ -3,7 +3,7 @@
         <div class="instructions">Collect $200.00 salary as you pass</div>
         <div class="go-word">{{get-value @board-position 'name'}}</div>
 
-        <PlayerToken />
+        <PlayerToken @position={{@board-position}}/>
         
     </div>
 </div>
