--- a/app/templates/components/railroad.hbs
+++ b/app/templates/components/railroad.hbs
@@ -5,7 +5,7 @@
         <div class="ownership">_</div>
         <i class="drawing fa fa-subway"></i>
         
-        <PlayerToken />
+        <PlayerToken @position={{@board-position}}/>
         
         <div class="price">Price ${{get-value @board-position 'price'}}</div>
     </div>
