--- a/app/templates/components/tax.hbs
+++ b/app/templates/components/tax.hbs
@@ -15,7 +15,7 @@
             {{/if}}
         </div>
 
-        <PlayerToken />
+        <PlayerToken @position={{@board-position}} />
         
     </div>
 </div>
