--- a/app/templates/components/utilities.hbs
+++ b/app/templates/components/utilities.hbs
@@ -9,7 +9,7 @@
         <i class="drawing 
         {{if-name-equals @board-position "Electric Company" "far fa-lightbulb" "fas fa-tint"}}"></i>
 
-        <PlayerToken />
+        <PlayerToken @position={{@board-position}}/>
         
         <div class="price">Price {{get-value @board-position 'price'}}</div>
     </div>
