Add PropertyManager Modal

--- a/app/templates/components/gameboard.hbs
+++ b/app/templates/components/gameboard.hbs
@@ -1,3 +1,5 @@
+<PropertyManager @isShowing={{@game.ui.showPropertyManagerModal}} />
+
 
 {{!-- <button onClick={{@game.endTurn}}> End turn</button> --}}
 
